--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router": "^3.2.6",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
